--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,7 +1,7 @@
 # This is the main configuration file for the application.
 # https://www.playframework.com/documentation/latest/ConfigFile
 
-ebean.default = ["models.*"]
+ebean.default="models.*"
 
 play.evolutions {
   db.default.enabled = true
@@ -11,8 +11,6 @@ play.evolutions {
 db {
   default.driver=org.h2.Driver
   default.url="jdbc:h2:mem:play"
-  default.username = sa
-  default.password = ""
 
   default.logSql = true
 }
