Add secret and allow filters

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -16,3 +16,8 @@ db {
 }
 
 play.http.secret.key="RGlBtp4>722S_uumQ5r7=RbA[=PGkC<`/Zr9sy3pPTmP?uH;84:ilRwMNKRS:GnZ"
+
+play.filters.hosts {
+  # Allow requests to example.com, its subdomains, and localhost:9000.
+  allowed = ["book-store-test.herokuapp.com", "localhost:9000"]
+}
