--- a/conf/application.conf
+++ b/conf/application.conf
@@ -9,13 +9,26 @@ play.evolutions {
 
 
 db {
-  default.driver=org.h2.Driver
-  default.url="jdbc:h2:mem:play"
+  # In-memory database
+  # default.driver=org.h2.Driver
+  # default.url="jdbc:h2:mem:play"
+
+  # mySQL setup
+  # default.driver=com.mysql.jdbc.Driver
+  # default.url="jdbc:mysql://localhost/bookstoredb"
+  # default.username=root
+  # default.password=""
+
+  # PostgreSQL
+  default.driver=org.postgresql.Driver
+  default.url="jdbc:postgresql://localhost:5432/bookstorepg?user=postgres&password=root"
+  default.url=${?DATABASE_URL}
 
   default.logSql = true
 }
 
 play.http.secret.key="RGlBtp4>722S_uumQ5r7=RbA[=PGkC<`/Zr9sy3pPTmP?uH;84:ilRwMNKRS:GnZ"
+play.http.secret.key=${?APPLICATION_SECRET}
 
 play.filters.hosts {
   # Allow requests to example.com, its subdomains, and localhost:9000.
